fix light theme background being unreadable

--- a/static/main.css
+++ b/static/main.css
@@ -5,7 +5,7 @@
 	--app-background: white;
 	--accent-text: white;
 	--text: black;
-	--light-bg: #111;
+	--light-bg: #999;
 	padding: 0;
 	margin: 0;
 }
@@ -117,6 +117,7 @@ footer {
 	:root {
 		--app-background: black;
 		--text: white;
+		--light-bg: #111;
 	}
 }
 
